--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -110,7 +110,7 @@ jobs:
         mkdir -p weights
         ln -s ~/tinygrad/weights/LLaMA weights/LLaMA
     - name: Run model inference benchmark
-      run: CUDA=1 python3 test/external/external_model_benchmark.py
+      run: CUDA=1 NOCLANG=1 python3 test/external/external_model_benchmark.py
     - name: Test speed vs torch
       run: CUDA=1 BIG=2 TORCHCUDA=1 python3 test/test_speed_v_torch.py | tee torch_speed.txt
     - name: Test tensor cores
